--- a/src/themes/simple/styles/index.scss
+++ b/src/themes/simple/styles/index.scss
@@ -1,3 +1,9 @@
+html, body {
+	padding: 0;
+	margin: 0;
+	background: #e2e2e2;
+}
+
 .tag {
 	&-item {
 		border: thin solid gray;
@@ -6,3 +12,24 @@
 	}
 }
 
+.container {
+	width: 90vw;
+	max-width: 1500px;
+	margin: auto;
+}
+
+.block {
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+	border-radius: 5px;
+	overflow: hidden;
+	margin: 15px;
+	background: white;
+}
+
+@import "../includes/navbar/navbar";
+.main {
+
+}
+
+@import "../includes/side/side";
+@import "../includes/footer/footer";
