添加文件管理

--- a/src/themes/simple/includes/side/_side.scss
+++ b/src/themes/simple/includes/side/_side.scss
@@ -1,31 +1,6 @@
 .side {
-
+	z-index: 10;
+	width: 20vw;
+	right: 0;
 }
 
-$panel-header-height: 40px;
-.panel {
-	&-header {
-		display: flex;
-		flex-direction: row;
-		height: $panel-header-height;
-		line-height: $panel-header-height;
-		background: #e0e0e0;
-	}
-
-	&-icon {
-
-	}
-
-	&-title {
-		flex: 1;
-	}
-
-	&-body {
-
-	}
-
-	&-content {
-		padding: 10px;
-		box-sizing: border-box;
-	}
-}
